--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Hacker theme
-description: Hacker is a theme for GitHub Pages.
+title: Anh-Duy TRAN
+description: MSE in Computer Security and Forensics
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-hacker
