--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Anh-Duy TRAN
-description: MSE in Computer Security and Forensics
+description: PhD Researcher in Software and Computer Security
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-hacker
